# Professional-Certifications

./: .editorconfig  404.html  CNAME  LICENSE.md  README.md  _config.yml  frontmatter.json  idnex.html  index.html  index.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: azure-static-web-apps-purple-bay-02558330f.yml  cd.yml  mkdocs.yml  static.yml
.well-known/: did.json
Microsoft-Certified-Azure-Fundamentals/: index.html
docs/: PMP.md  index.md
docs/IEEE/: CSDP.md
docs/MS/: Microsoft-Certified-Azure-Fundamentals.md
docs/certs/: Microsoft-Certified-Azure-Fundamentals.md  PMP.md
docs/css/: extra.css
project-management-professional/: index.html
search/: search_index.json
